# libaec

./: CMakeLists.txt
cmake/: libaec-config.cmake.in
src/: CMakeLists.txt
